# Entrega4

./: .coveragerc  .gitpod.yml  Documento Resultados Entrega 5.docx  Entrega5.docx  README.md  Teamwork.docx  Teamwork2.docx  bff.Dockerfile  bodegas.Dockerfile  docker-compose.yml  entregas_de_los_alpes.Dockerfile  pyproject.toml  vehiculos.Dockerfile  ~$cumento Resultados Entrega 5.docx
connectors/pulsar/: debezium-mysql-source-config.yaml
src/EDA/api/: productos.py
src/EDA/modulos/cliente/aplicacion/: handlers.py
src/EDA/modulos/cliente/dominio/: entidades.py  eventos.py  objetos_valor.py  repositorios.py
src/EDA/modulos/cliente/infraestructura/: dto.py
src/EDA/modulos/productos/aplicacion/: mapeadores.py
src/EDA/seedwork/dominio/: objetos_valor.py
src/bff_web/: main.py
src/bff_web/api/v1/: consultas.py  esquemas.py  mutaciones.py
src/bodegas/: comandos.py  consumidores.py  eventos.py  main.py
src/cliente/config/: api.py
src/cliente/modulos/aplicacion/: handlers.py
src/cliente/modulos/infraestructura/: repositorios.py
src/cliente/seedwork/dominio/: entidades.py  objetos_valor.py  reglas.py  repositorios.py  servicios.py
src/cliente/seedwork/infraestructura/: uow.py
src/entregasDeLosAlpes/api/: __init__.py  productos.py
src/entregasDeLosAlpes/config/: db.py  uow.py
src/entregasDeLosAlpes/seedwork/aplicacion/: sagas.py
src/entregasDeLosAlpes/seedwork/infraestructura/: uow.py
src/notificaciones/: main.py
src/ui/aeroalpes/: consumidor.py
src/vehiculos/: comandos.py  eventos.py  main.py  utils.py
(+118 files in other folders)
