[project]
name = "entregasDeLosAlpes"
version = "1.0.0"
authors = [
  { name="Andrés Lugo", email="a.lugos@uniandes.edu.co" },
  { name="Luisa Fuentes", email="l.fuentesl@uniandes.edu.co" },
  { name="Julian Mora", email="j.morav@uniandes.edu.co" },
  { name="Maria Paula Gonzalez", email="m.gonzaleze@uniandes.edu.co" },
]
description = "Proyecto de ejemplo de entregasDeLosAlpes"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]